Cleanup tests (#184)
* fix: Use String.contains() instead of RegExp matching for finding a specific term

* QueryTest: Correct assert{,Array,Not}Equals parameter ordering

* QueryTest.analyticsTags: Compare built query to result of getter as in other tests

* QueryTest: Remove unneccessary "test_" prefix

* QueryTest: Use Integer.valueOf() instead of new Integer()

* QueryTest: Check query string content in every test

* IndexTest: Remove unneccessary "test" prefix

* IndexTest: Use getIndex instead of deprecated initIndex

* IndexTest: Use diamond operator

* IndexTest: Use Collections.singletonList instead of Arrays.asList with only one element

* BrowseIteratorTest: Remove unneccessary "test" prefix

* PlacesClientTest: Remove unneccessary "test" prefix

* PlacesQueryTest: Remove unneccessary "test_" prefix

* PlacesQueryTest: Use Integer.valueOf() instead of new Integer()

* PlacesQueryTest: Correct assert{,Array,Not}Equals parameter ordering

* PlacesQueryTest: When possible, inline query2 and rename query1 to query

* QueryTest: When possible, inline query2 and rename query1 to query